syntax = "proto3";

package voer.v1;

import "google/protobuf/timestamp.proto";

option go_package = "api/v1";

// General message types

message Package {
    uint64 id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;

    string name = 4;
}

message PackageVersion {
    uint64 id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;

    uint64 packageId = 4;
    uint64 version = 5;
}

message PackageVersionFile {
    uint64 id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;

    uint64 packageVersionId = 4;
    string protoContents = 5;
    string fileName = 6;
}

// UploadPackageVersion

message ProtoFile {
    string fileName = 1;
    string fileContents = 2;
}

message PackageFile {
    string packageName = 1;
    repeated ProtoFile files = 2;
}

message UploadPackageVersionRequest {
    repeated PackageFile packages = 1;
}

message UploadPackageVersionResponse {
    repeated PackageVersion packageVersions = 1;
}

// ValidatePackageVersion

message ValidatePackageVersionRequest {
    repeated PackageFile packages = 1;
}

message ValidatePackageVersionResponse {
    bool isValid = 1;
    string error = 2;
}

// Get Package Version

message GetPackageVersionRequest {
    string packageName = 1;
    uint64 version = 2;
}

message GetPackageVersionResponse {
    PackageVersion packageVersion = 1;
    repeated PackageVersionFile files = 2;
}


// gRPC service for managing packages
service PackageSvc {
    rpc UploadPackageVersion(UploadPackageVersionRequest) returns (UploadPackageVersionResponse) {}
    rpc ValidatePackageVersion(ValidatePackageVersionRequest) returns (ValidatePackageVersionResponse) {}
    rpc GetPackageVersion(GetPackageVersionRequest) returns (GetPackageVersionResponse) {}
}
